[package]
name = "rosetta-utc"
version = "0.1.0"
edition = "2024"
description = "A wrapper implementation of DateTime<Utc> providing binary diesel bindings for SQLite and PostgreSQL."
license = "MIT"
readme = "README.md"
repository = "https://github.com/earth-metabolome-initiative/rosetta-utc"
homepage = "https://github.com/earth-metabolome-initiative/rosetta-utc"
keywords = ["utc", "diesel", "postgres", "sqlite", "chrono"]
categories = ["database", "date-and-time", "encoding"]

[dependencies]
diesel = { version = "2.3.6", git = "https://github.com/LucaCappelletti94/diesel", branch = "future3", optional = true, features = [
	"chrono",
] }
serde = { version = "1.0", optional = true, features = ["derive"] }
chrono = "0.4"

[features]
default = []
serde = ["dep:serde", "chrono/serde"]
diesel = ["dep:diesel"]
postgres = ["diesel", "diesel/postgres"]
sqlite = ["diesel", "diesel/sqlite"]
wasm = ["chrono/wasmbind"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints.rust]
missing_docs = "deny"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
bare_urls = "forbid"
invalid_codeblock_attributes = "forbid"
invalid_html_tags = "forbid"
missing_crate_level_docs = "forbid"
unescaped_backticks = "forbid"
redundant_explicit_links = "forbid"
invalid_rust_codeblocks = "forbid"

[lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }
